  Info:
    - Resume development
    - Do not drop a rocket silo
    - Setup the hidden surface
    - Sum the total items inside with circuits
    - Add note about the machine being ticked
    - Prepare the recipe icon
    - Lock the quality disruptor to an "any quality" recipe
    - Test with the repair pack
    - Make the entity blueprintable
    - Rename furnace to crafter
    - Get a reset pulse every time the sum changes
    - Add the counter itself
    - Tuck the combinator setup away in another file
    - Rebrand from quality disruptor to quality condenser
    - Add research center skin (as an option)
    - Hide the alt recipe icon
    - Use automated insertion!
    - Render the modules large and offset
    - Add configurable base quality ("items per next quality")
    - `draw_as_glow = true`
    - Add an inserter that waits for 5 seconds
    - Increase selection area
    - Prevent highlighting by inserters
    - Only match the tick to make re-arming simpler
    - Fix flag typo
    - Clean up the combinators upon deathrattle
---------------------------------------------------------------------------------------------------
Version: 0.0.2
Date: 2025. 01. 10
  Info:
    - Reword readme for monospaced goodness
    - Stash data stage progress
    - Make frame count coexist with the shadow
    - Try to get the working visualization to work
    - Fix the working viz due to nesting
    - Make it look good day and night
    - Credit "hurricane compatible graphics_set" to xorimuth
    - Tweak the (animation) speed
    - Add sounds
    - Make the funnel not transparent (kinda distracting)
    - Fix the glow visualization desyncing
    - Stash crafting speed tweaks (speed modules will be bad)
    - Stash mod comparison table
    - Set minimum animation speed to 50%
    - Initial draft of multiblock entity
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 2025. 01. 03
  Info:
    - Initial commit