@@ -28,6 +28,7 @@ Date: ????
     - Only match the tick to make re-arming simpler
     - Fix flag typo
     - Clean up the combinators upon deathrattle
+    - Setup offering system
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.2
 Date: 2025. 01. 10
